--- a/jenkins/jenkinsfile
+++ b/jenkins/jenkinsfile
@@ -20,7 +20,7 @@ pipeline {
 
       stage("Build Docker Image") {
         steps {
-            sh 'docker build -t "${params.ImageName}":"${params.ImageTag}" . ' 
+            sh "docker build -t ${params.ImageName}:${params.ImageTag} . " 
         }  
       }
     }
