--- a/jenkins/jenkinsfile
+++ b/jenkins/jenkinsfile
@@ -1,6 +1,6 @@
 pipeline {
     agent {
-        label "docker-agent"   
+        label "cimachine"   
     }
     options {
         timeout(time: 1, unit: 'HOURS')
